--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.1.3",
     "cra-template": "1.2.0",
     "macro-css": "^1.0.5",
     "react": "^18.2.0",
