--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "macro-css": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0"
   },
