--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.2.0",
     "macro-css": "^1.0.5",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
